--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
 title: "Bierspot"
-description: "This is a description of my awesome site."
+description: "Productiviteit en gezelligheid in 1"
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
@@ -25,7 +25,7 @@ gems:
 
 
 # Site owner
-owner:
+owner: Naomi Zaki 
   name:
   email:
   twitter:
@@ -33,7 +33,6 @@ owner:
     ad-client:
     ad-slot:
   bio:
-  avatar: bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname:
 
 
